--- a/style.css
+++ b/style.css
@@ -1243,6 +1243,13 @@ body .page-services .services {
       flex-wrap: wrap;
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 body .page-services .services .desc {
@@ -1253,6 +1260,20 @@ body .page-services .services .desc {
   padding: 80px 20px 20px 20px;
   width: 100vw;
   position: relative;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-bottom: 25px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
 }
 
 body .page-services .services .desc h3 {
@@ -1326,6 +1347,12 @@ body .page-services .services img {
   body .page-services .services {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
+  }
+  body .page-services .services .services {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
   body .page-services .services .desc {
     width: 66.66vw;
